# IoT_degree

./: .env  alembic.ini  analyze_postgres_data.py  celery_app.py  celerybeat-schedule.bak  celerybeat-schedule.dir  celerybeat_schedule.py  checker.py  data_analys.py  database.py  fetch_from_postgres.py  generate_data.py  iot_report.json  main.py  models.py  mosquitto.conf  publisher.py  pyproject.toml  save_to_postgres.py  second_analys.py  subscriber.py  tasks.py  validator.py
viewer/src/: asgi.py  settings.py  urls.py  wsgi.py
viewer/viewer_admin/: admin.py  apps.py  models.py
