[tool.poetry]
name = "iot-degree"
version = "0.1.0"
description = ""
authors = ["Odin-max <meh84741@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
matplotlib = "^3.9.2"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
psycopg = "^3.2.3"
django = "^5.1.3"
djangorestframework = "^3.15.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.2.0"
django-celery-beat = "^2.7.0"
billiard = "^4.2.1"
kombu = "^5.4.2"
pytz = "^2024.2"
faker = "^33.1.0"
cryptography = "^44.0.0"
python-dotenv = "^1.0.1"
paho-mqtt = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
